<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LendBookActivity"
    android:fitsSystemWindows="true">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="24dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/fab_margin">

        <TextView
            android:text="@string/book_select"
            android:textColor="@color/orange"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="@dimen/fab_margin"
            android:layout_gravity="center_horizontal" />

        <Spinner
            style="@style/Widget.AppCompat.Spinner.DropDown"
            android:id="@+id/book"
            android:spinnerMode="dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:dropDownWidth="match_parent" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/fab_margin">

        <TextView
            android:text="@string/user_select"
            android:textColor="@color/orange"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginRight="@dimen/fab_margin"
            android:layout_gravity="center_horizontal" />

        <Spinner
            style="@style/Widget.AppCompat.Spinner.DropDown"
            android:id="@+id/user"
            android:spinnerMode="dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:dropDownWidth="match_parent" />


    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_lend"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:padding="12dp"
        android:onClick="lendBook"
        android:text="@string/lend_book"/>


</LinearLayout>



</LinearLayout>